[project]
name = "anova-culinary"
version = "1.0.0"
description = "Home Assistant custom component for Anova Precision Cookers and Ovens"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "aiohttp",
    "homeassistant>=2026.3.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-homeassistant-custom-component>=0.13.322",
    "pytest-cov>=7.0.0",
    "syrupy>=5.0.0",
    "ruff>=0.15.10",
]
;